--- a/BT-1/BT-1.ipynb
+++ b/BT-1/BT-1.ipynb
@@ -322,6 +322,135 @@
     "    printNodesWithoutSibling(root.left)\n",
     "    printNodesWithoutSibling(root.right)    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "a4d01e54",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def removeLeaf(root):\n",
+    "    if root is None:\n",
+    "        return \n",
+    "    if root.left is None and root.right is None:\n",
+    "        return None\n",
+    "    root.left = removeLeaf(root.left)\n",
+    "    root.right = removeLeaf(root.right)    \n",
+    "    return root"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c9f97d24",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def mirrorBinaryTree(root):\n",
+    "    if root is None:\n",
+    "        return None\n",
+    "    mirrorBinaryTree(root.right) \n",
+    "    mirrorBinaryTree(root.left)\n",
+    "    root.left,root.right = root.right,root.left\n",
+    "    return root"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8c9f50a6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def height(root):\n",
+    "    if root is None:\n",
+    "        return\n",
+    "    leftH = height(root.left)\n",
+    "    rightH = height(root.right)\n",
+    "    return 1 + max(leftH,rightH)\n",
+    "\n",
+    "def isBalanced(root):\n",
+    "    if root is None:\n",
+    "        return\n",
+    "    lh = height(root.left)\n",
+    "    rh = height(root.right)\n",
+    "    if lh - rh > 1 and rh - lh > 1:\n",
+    "        return False\n",
+    "    isleftBalanced = isBalanced(root.left)\n",
+    "    isrightBalanced = isBalanced(root.right)\n",
+    "    return isleftBalanced and isrightBalanced"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2ae3e305",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def HisBalanced(root):\n",
+    "    if root is None:\n",
+    "        return\n",
+    "    lh , lBalanced = HisBalanced(root.left)\n",
+    "    rh , rBalanced = HisBalanced(root.right)\n",
+    "    h = 1 + max(lh,rh)\n",
+    "    if lBalanced and Rbalanced:\n",
+    "        return 1,True\n",
+    "    else:\n",
+    "        return 0,False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ebd603e9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def height(root):\n",
+    "    if root is None:\n",
+    "        return 0\n",
+    "    lh = height(root.left)\n",
+    "    rh = height(root.right)\n",
+    "    return 1 + max(lh,rh)\n",
+    "\n",
+    "\n",
+    "def diameterOfBinaryTree(root) :\n",
+    "    if root is None:\n",
+    "        return 0\n",
+    "    lh = height(root.left)\n",
+    "    rh = height(root.right)\n",
+    "\n",
+    "    ld = diameterOfBinaryTree(root.left)\n",
+    "    rd = diameterOfBinaryTree(root.right)\n",
+    "    \n",
+    "    return max(1 + lh + rh, max(ld,rd))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dabe525e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def diameterOfBinaryTree(root):\n",
+    "    if root is None:\n",
+    "        return 0,0\n",
+    "    lh,ld = diameterOfBinaryTree(root.left)\n",
+    "    rh,rd = diameterOfBinaryTree(root.right)\n",
+    "    \n",
+    "    return 1 + max(lh,rh) , max(1 + lh + rh, max(ld,rd))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "49056679",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
