--- a/dp-2/dp-2.ipynb
+++ b/dp-2/dp-2.ipynb
@@ -108,12 +108,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "e848082e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Longest common subsequence Req\n"
+    "# Longest common subsequence Req\n",
+    "def lcs(str1,str2,i,j,dp):\n",
+    "    if i==len(str1) or j == len(str2):\n",
+    "        return 0 \n",
+    "    ans = 0\n",
+    "    if str1[i] == str2[j]:\n",
+    "        if dp[i+1][j+1] == -1:\n",
+    "            smallans = lcs(str1, str2, i+1, j+1,dp)\n",
+    "            dp[i+1][j+1] = smallans\n",
+    "            ans = 1 + smallans\n",
+    "        else:\n",
+    "            ans = 1 + dp[i+1][j+1]\n",
+    "    else:\n",
+    "        if dp[i][j+1] == -1:\n",
+    "            ans1 = lcs(str1,str2,i,j+1,dp)\n",
+    "            dp[i][j+1] = ans1\n",
+    "        else:\n",
+    "            ans1 = dp[i][j+1]\n",
+    "        if dp[i+1][j] == -1:\n",
+    "            ans2 = lcs(str1,str2,i+1,j,dp)\n",
+    "            dp[i+1][j] = ans2\n",
+    "        else:\n",
+    "            ans2 = dp[i+1][j]\n",
+    "        ans = max(ans1,ans2)\n",
+    "    return ans\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "str1 = \"abedgjc\"\n",
+    "str2 = \"bmdgsc\"\n",
+    "mRows = len(str1)\n",
+    "nCols = len(str2)\n",
+    "dp = [[-1 for j in range(nCols+1)] for i in range(mRows+1)]\n",
+    "ans = lcs(str1,str2,0,0,dp)\n",
+    "ans"
    ]
   }
  ],
